fixing hibernate annotations removing PersistentTuple adding CommentPrimary Key fixing TrackerPersister using transactions fixed commits setting proper comment id added messing getter/setter